k8s/minikube/mysql_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: paddle-cloud-mysql
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: paddle-cloud-mysql
    spec:
      volumes:
      - name: mysql-data
        hostPath:
            path: "/Users/gongwb/go/src/github.com/PaddlePaddle/minikube/pcloud/data/mysql"
      containers:
      - name: mysql
        image: mysql:5.7
        imagePullPolicy: IfNotPresent
        #volumeMounts:
           #- name: mysql-data
           #mountPath: /var/lib/mysql2
        args: ["--character-set-server=utf8mb4", "--collation-server=utf8mb4_unicode_ci"]
      nodeSelector:
        kubernetes.io/hostname: minikube
