k8s/minikube/pfs_deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pfsserver
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pfsserver
    spec:
      volumes:
      - name: public-data-storage
        hostPath:
          path: "/Users/gongwb/go/src/github.com/PaddlePaddle/minikube/pcloud/data/public"
      - name: data-storage
        hostPath:
          path: "/Users/gongwb/go/src/github.com/PaddlePaddle/minikube/pcloud/data/users"
      containers:
      - name: pfs
        imagePullPolicy: Always
        image: paddlepaddle/pfsserver:latest
        command: ["/pfsserver/pfsserver", "-tokenuri", "http://paddle-cloud-service:8000", "-logtostderr=true", "-log_dir=./log", "-v=4"]
        volumeMounts:
        - name: data-storage
          mountPath: /pfs/datacenter/home
        - name: public-data-storage
          mountPath: /pfs/datacenter/public/dataset
        ports:
        - containerPort: 8080
      nodeSelector:
        kubernetes.io/hostname: minikube
