k8s/minikube/cloud_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: paddle-cloud-service
spec:
  selector:
    app: paddle-cloud
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
