k8s/minikube/pfs_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pfs-service
spec:
  selector:
    app: pfsserver 
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
