k8s/minikube/cloud_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: paddle-cloud-ingress
spec:
  rules:
  - host: cloud.testpcloud.org
    http:
      paths:
      - path: /api/v1/files
        backend:
          serviceName: pfs-service
          servicePort: 8080
      - path: /
        backend:
          serviceName: paddle-cloud-service
          servicePort: 8000
